[package]
name = "bisection_key"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "lexiographic fractional index key algorithm"
homepage = "https://github.com/Cumulo/bisection-key.rs/"
documentation = "https://docs.rs/crate/bisection_key/"
repository = "https://github.com/Cumulo/bisection-key.rs/"
readme = "README.md"
keywords = ["fractional-index"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
